packages/klighd-core/src/filtering/generated/SemanticFilteringParser.ts
// Generated from SemanticFiltering.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import SemanticFilteringListener from "./SemanticFilteringListener.js";
import SemanticFilteringVisitor from "./SemanticFilteringVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class SemanticFilteringParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly DOUBLE = 9;
	public static readonly TAG = 10;
	public static readonly NUMTAG = 11;
	public static readonly SELF = 12;
	public static readonly PARENT = 13;
	public static readonly CHILDREN = 14;
	public static readonly SIBLINGS = 15;
	public static readonly ADJACENTS = 16;
	public static readonly TRUE = 17;
	public static readonly FALSE = 18;
	public static readonly ID = 19;
	public static readonly MULT = 20;
	public static readonly DIV = 21;
	public static readonly MOD = 22;
	public static readonly ADD = 23;
	public static readonly SUB = 24;
	public static readonly GEQ = 25;
	public static readonly GT = 26;
	public static readonly LEQ = 27;
	public static readonly LT = 28;
	public static readonly EQ = 29;
	public static readonly NEQ = 30;
	public static readonly NOT = 31;
	public static readonly AND = 32;
	public static readonly OR = 33;
	public static readonly WS = 34;
	public static override readonly EOF = Token.EOF;
	public static readonly RULE_semanticFilterRule = 0;
	public static readonly RULE_orExpr = 1;
	public static readonly RULE_andExpr = 2;
	public static readonly RULE_notExpr = 3;
	public static readonly RULE_equalsExpr = 4;
	public static readonly RULE_comparisonExpr = 5;
	public static readonly RULE_addExpr = 6;
	public static readonly RULE_multExpr = 7;
	public static readonly RULE_boolAtom = 8;
	public static readonly RULE_numAtom = 9;
	public static readonly RULE_forallExpr = 10;
	public static readonly RULE_existsExpr = 11;
	public static readonly RULE_tagExpr = 12;
	public static readonly RULE_numtagExpr = 13;
	public static readonly RULE_listExpr = 14;
	public static readonly RULE_listComprehension = 15;
	public static readonly RULE_varExpr = 16;
	public static readonly RULE_list = 17;
	public static readonly literalNames: (string | null)[] = [ null, "'('", 
                                                            "')'", "'forall'", 
                                                            "'exists'", 
                                                            "'['", "':'", 
                                                            "'|'", "']'", 
                                                            null, "'#'", 
                                                            "'$'", "'self'", 
                                                            "'parent'", 
                                                            "'children'", 
                                                            "'siblings'", 
                                                            "'adjacents'", 
                                                            "'true'", "'false'", 
                                                            null, "'*'", 
                                                            "'/'", "'%'", 
                                                            "'+'", "'-'", 
                                                            "'>='", "'>'", 
                                                            "'<='", "'<'", 
                                                            "'='", "'!='", 
                                                            "'!'", "'&&'", 
                                                            "'||'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "DOUBLE", 
                                                             "TAG", "NUMTAG", 
                                                             "SELF", "PARENT", 
                                                             "CHILDREN", 
                                                             "SIBLINGS", 
                                                             "ADJACENTS", 
                                                             "TRUE", "FALSE", 
                                                             "ID", "MULT", 
                                                             "DIV", "MOD", 
                                                             "ADD", "SUB", 
                                                             "GEQ", "GT", 
                                                             "LEQ", "LT", 
                                                             "EQ", "NEQ", 
                                                             "NOT", "AND", 
                                                             "OR", "WS" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"semanticFilterRule", "orExpr", "andExpr", "notExpr", "equalsExpr", "comparisonExpr", 
		"addExpr", "multExpr", "boolAtom", "numAtom", "forallExpr", "existsExpr", 
		"tagExpr", "numtagExpr", "listExpr", "listComprehension", "varExpr", "list",
	];
	public get grammarFileName(): string { return "SemanticFiltering.g4"; }
	public get literalNames(): (string | null)[] { return SemanticFilteringParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return SemanticFilteringParser.symbolicNames; }
	public get ruleNames(): string[] { return SemanticFilteringParser.ruleNames; }
	public get serializedATN(): number[] { return SemanticFilteringParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, SemanticFilteringParser._ATN, SemanticFilteringParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public semanticFilterRule(): SemanticFilterRuleContext {
		let localctx: SemanticFilterRuleContext = new SemanticFilterRuleContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, SemanticFilteringParser.RULE_semanticFilterRule);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 36;
			this.orExpr();
			this.state = 37;
			this.match(SemanticFilteringParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public orExpr(): OrExprContext {
		let localctx: OrExprContext = new OrExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, SemanticFilteringParser.RULE_orExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 39;
			this.andExpr();
			this.state = 44;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===33) {
				{
				{
				this.state = 40;
				this.match(SemanticFilteringParser.OR);
				this.state = 41;
				this.andExpr();
				}
				}
				this.state = 46;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public andExpr(): AndExprContext {
		let localctx: AndExprContext = new AndExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, SemanticFilteringParser.RULE_andExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 47;
			this.notExpr();
			this.state = 52;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===32) {
				{
				{
				this.state = 48;
				this.match(SemanticFilteringParser.AND);
				this.state = 49;
				this.notExpr();
				}
				}
				this.state = 54;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public notExpr(): NotExprContext {
		let localctx: NotExprContext = new NotExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, SemanticFilteringParser.RULE_notExpr);
		try {
			this.state = 58;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 31:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 55;
				this.match(SemanticFilteringParser.NOT);
				this.state = 56;
				this.notExpr();
				}
				break;
			case 1:
			case 3:
			case 4:
			case 9:
			case 10:
			case 11:
			case 17:
			case 18:
			case 19:
			case 24:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 57;
				this.equalsExpr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public equalsExpr(): EqualsExprContext {
		let localctx: EqualsExprContext = new EqualsExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, SemanticFilteringParser.RULE_equalsExpr);
		let _la: number;
		try {
			this.state = 73;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 60;
				this.boolAtom();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 61;
				this.comparisonExpr();
				this.state = 64;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===29 || _la===30) {
					{
					this.state = 62;
					_la = this._input.LA(1);
					if(!(_la===29 || _la===30)) {
					this._errHandler.recoverInline(this);
					}
					else {
						this._errHandler.reportMatch(this);
					    this.consume();
					}
					this.state = 63;
					this.comparisonExpr();
					}
				}

				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 66;
				this.addExpr();
				{
				this.state = 67;
				_la = this._input.LA(1);
				if(!(_la===29 || _la===30)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 68;
				this.addExpr();
				}
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 70;
				this.match(SemanticFilteringParser.ID);
				{
				this.state = 71;
				_la = this._input.LA(1);
				if(!(_la===29 || _la===30)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 72;
				this.match(SemanticFilteringParser.ID);
				}
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public comparisonExpr(): ComparisonExprContext {
		let localctx: ComparisonExprContext = new ComparisonExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, SemanticFilteringParser.RULE_comparisonExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 75;
			this.addExpr();
			{
			this.state = 76;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 503316480) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			this.state = 77;
			this.addExpr();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public addExpr(): AddExprContext {
		let localctx: AddExprContext = new AddExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, SemanticFilteringParser.RULE_addExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 79;
			this.multExpr();
			this.state = 84;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===23 || _la===24) {
				{
				{
				this.state = 80;
				_la = this._input.LA(1);
				if(!(_la===23 || _la===24)) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 81;
				this.multExpr();
				}
				}
				this.state = 86;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public multExpr(): MultExprContext {
		let localctx: MultExprContext = new MultExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, SemanticFilteringParser.RULE_multExpr);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 87;
			this.numAtom();
			this.state = 92;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 7340032) !== 0)) {
				{
				{
				this.state = 88;
				_la = this._input.LA(1);
				if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 7340032) !== 0))) {
				this._errHandler.recoverInline(this);
				}
				else {
					this._errHandler.reportMatch(this);
				    this.consume();
				}
				this.state = 89;
				this.numAtom();
				}
				}
				this.state = 94;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public boolAtom(): BoolAtomContext {
		let localctx: BoolAtomContext = new BoolAtomContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, SemanticFilteringParser.RULE_boolAtom);
		try {
			this.state = 104;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 17:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 95;
				this.match(SemanticFilteringParser.TRUE);
				}
				break;
			case 18:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 96;
				this.match(SemanticFilteringParser.FALSE);
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 97;
				this.tagExpr();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 98;
				this.existsExpr();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 99;
				this.forallExpr();
				}
				break;
			case 1:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 100;
				this.match(SemanticFilteringParser.T__0);
				this.state = 101;
				this.orExpr();
				this.state = 102;
				this.match(SemanticFilteringParser.T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public numAtom(): NumAtomContext {
		let localctx: NumAtomContext = new NumAtomContext(this, this._ctx, this.state);
		this.enterRule(localctx, 18, SemanticFilteringParser.RULE_numAtom);
		let _la: number;
		try {
			this.state = 115;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 9:
			case 24:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 107;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la===24) {
					{
					this.state = 106;
					this.match(SemanticFilteringParser.SUB);
					}
				}

				this.state = 109;
				this.match(SemanticFilteringParser.DOUBLE);
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 110;
				this.numtagExpr();
				}
				break;
			case 1:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 111;
				this.match(SemanticFilteringParser.T__0);
				this.state = 112;
				this.addExpr();
				this.state = 113;
				this.match(SemanticFilteringParser.T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public forallExpr(): ForallExprContext {
		let localctx: ForallExprContext = new ForallExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 20, SemanticFilteringParser.RULE_forallExpr);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 117;
			this.match(SemanticFilteringParser.T__2);
			this.state = 118;
			this.listComprehension();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public existsExpr(): ExistsExprContext {
		let localctx: ExistsExprContext = new ExistsExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 22, SemanticFilteringParser.RULE_existsExpr);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 120;
			this.match(SemanticFilteringParser.T__3);
			this.state = 121;
			this.listComprehension();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public tagExpr(): TagExprContext {
		let localctx: TagExprContext = new TagExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 24, SemanticFilteringParser.RULE_tagExpr);
		try {
			this.state = 127;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 10, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 123;
				this.match(SemanticFilteringParser.TAG);
				this.state = 124;
				this.match(SemanticFilteringParser.ID);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 125;
				this.match(SemanticFilteringParser.TAG);
				this.state = 126;
				this.listExpr();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public numtagExpr(): NumtagExprContext {
		let localctx: NumtagExprContext = new NumtagExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 26, SemanticFilteringParser.RULE_numtagExpr);
		try {
			this.state = 133;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 11, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 129;
				this.match(SemanticFilteringParser.NUMTAG);
				this.state = 130;
				this.match(SemanticFilteringParser.ID);
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 131;
				this.match(SemanticFilteringParser.NUMTAG);
				this.state = 132;
				this.listExpr();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public listExpr(): ListExprContext {
		let localctx: ListExprContext = new ListExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 28, SemanticFilteringParser.RULE_listExpr);
		try {
			this.state = 137;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 12:
			case 13:
			case 14:
			case 15:
			case 16:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 135;
				this.list();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 136;
				this.listComprehension();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public listComprehension(): ListComprehensionContext {
		let localctx: ListComprehensionContext = new ListComprehensionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 30, SemanticFilteringParser.RULE_listComprehension);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 139;
			this.match(SemanticFilteringParser.T__4);
			this.state = 140;
			this.match(SemanticFilteringParser.ID);
			this.state = 141;
			this.match(SemanticFilteringParser.T__5);
			this.state = 142;
			this.listExpr();
			this.state = 143;
			this.match(SemanticFilteringParser.T__6);
			this.state = 144;
			this.varExpr();
			this.state = 145;
			this.match(SemanticFilteringParser.T__7);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public varExpr(): VarExprContext {
		let localctx: VarExprContext = new VarExprContext(this, this._ctx, this.state);
		this.enterRule(localctx, 32, SemanticFilteringParser.RULE_varExpr);
		try {
			this.state = 153;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 13, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 147;
				this.orExpr();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 148;
				this.match(SemanticFilteringParser.ID);
				this.state = 149;
				this.match(SemanticFilteringParser.LT);
				this.state = 150;
				this.orExpr();
				this.state = 151;
				this.match(SemanticFilteringParser.GT);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public list(): ListContext {
		let localctx: ListContext = new ListContext(this, this._ctx, this.state);
		this.enterRule(localctx, 34, SemanticFilteringParser.RULE_list);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 155;
			_la = this._input.LA(1);
			if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 126976) !== 0))) {
			this._errHandler.recoverInline(this);
			}
			else {
				this._errHandler.reportMatch(this);
			    this.consume();
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}


	private static __ATN: ATN;
	public static get _ATN(): ATN {
		if (!SemanticFilteringParser.__ATN) {
			SemanticFilteringParser.__ATN = new ATNDeserializer().deserialize(SemanticFilteringParser._serializedATN);
		}

		return SemanticFilteringParser.__ATN;
	}


	static DecisionsToDFA = SemanticFilteringParser._ATN.decisionToState.map( (ds: DecisionState, index: number) => new DFA(ds, index) );

}

export class SemanticFilterRuleContext extends ParserRuleContext {
	constructor(parser?: SemanticFilteringParser, parent?: ParserRuleContext, invokingState?: number) {
		super(parent, invokingState);
    	this.parser = parser;
	}
	public orExpr(): OrExprContext {
		return this.getTypedRuleContext(OrExprContext, 0) as OrExprContext;
	}
	public EOF(): TerminalNode {
		return this.getToken(SemanticFilteringParser.EOF, 0);
	}
    public get ruleIndex(): number {
    	return SemanticFilteringParser.RULE_semanticFilterRule;
	}
	public enterRule(listener: SemanticFilteringListener): void {
	    if(listener.enterSemanticFilterRule) {
	 		listener.enterSemanticFilterRule(this);
		}
	}
	public exitRule(listener: SemanticFilteringListener): void {
	    if(listener.exitSemanticFilterRule) {
	 		listener.exitSemanticFilterRule(this);
		}
	}
	// @Override
	public accept<Result>(visitor: SemanticFilteringVisitor<Result>): Result {
		if (visitor.visitSemanticFilterRule) {
			return visitor.visitSemanticFilterRule(this);
		} else {
			return visitor.visitChildren(this);
		}
	}
}

